EpisodeTracker
Added the EpisodeTracker, the relevant command, locale changes and some
package moving.